--- a/css/styles.css
+++ b/css/styles.css
@@ -1,249 +1,244 @@
-body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-*:focus {
-    outline: 2px dotted #ff7500;
-    outline-offset: 3px;
-}
-
-.logo-img {
-    object-fit: cover;
-    object-position: center;
-}
-
-.logo-img:hover {
-    opacity: 0.8;
-}
-
-.logo-img:active {
-    opacity: 0.6;
-}
-
-.logo-img img {
-    display: block;
+ body {
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .site-header {
-    border-top: 5px solid #ff7500;
-    background-color: #fff;
-    padding-top: 16px;
-    padding-bottom: 16px;
+   background-color: #fff;
+   color: black;
 }
 
-.header-section {
-    background-color: #252420;
-    color: #fff;
+.site-header-top {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.sitenav-right {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    list-style: none;
+.logo {
+   border-radius: 5px;
+   padding-top: 12px;
+   padding-right: 24px;
+   padding-bottom: 12px;
+   padding-left: 24px;
+   font-size: 20px;
+   text-decoration: none;
+   background-color: #ff7500;
+   color: #fff;
+   margin-bottom: 27px;
+   transition: background-color 0.5 ease;
 }
 
-.link {
-    border-bottom: 3px solid #ff7500;
+.logo:hover {
+   background-color: rgba(255, 117, 0, 0.7);
 }
 
-.sitenav-item {
-    margin-right: 32px;
+.site-header-right {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.sitenav-item:last-child {
-    margin-right: 0;
+.site-header-nav ul {
+   display: flex;
 }
 
-.sitenav-link {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 15px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    list-style: none;
-    color: #000;
+.site-header-nav a:hover {
+   color: #ff7500;
 }
 
-.sitenav-link:hover {
-    color: #ff7500;
+.site-header-nav a {
+   text-decoration: none;
+   color: #000;
 }
 
-.siteheader-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.site-header-nav li {
+   list-style: none;
+   margin-right: 15px;
 }
 
-.site-main {
-    margin: 0;
-    padding: 0;
-    padding-top: 210px;
-    padding-bottom: 210px;
-    display: flex;
-    list-style: none;
+.head-page {
+   border-bottom: #ff7500 solid 4px;
 }
 
-.feature {
-    margin-right: 40px;
+.follow-link {
+   padding-top: 12px;
+   padding-right: 24px;
+   padding-bottom: 12px;
+   padding-left: 24px;
+   text-decoration: none;
+   background-color: #ff7500;
+   color: #fff;
+   border-radius: 5px;
 }
 
-.feature:last-child {
-    margin-right: 0;
-}
-
-.hero {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 80px;
-    padding-bottom: 80px;
-}
-
-.hero-img {
-    border-radius: 8px;
-}
-
-.main-link {
-    display: inline-block;
-    padding: 12px 24px;
-    border-radius: 4px;
-    font-weight: 700;
-    list-style: none;
-    font-size: 13px;
-    line-height: 15px;
-    letter-spacing: 0.5px;
-    background-color: #ff7500;
-    color: #fff;
-    text-decoration: none;
-}
-
-.main-link:hover {
-    opacity: 0.8;
-}
-
-.orange-line {
-    width: 80px;
-    border: 0;
-    margin: 0;
-    margin-bottom: 40px;
-    height: 3px;
-    background: #ff7500;
-}
-
-.features-icon-wrapper {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: rgba(255, 117, 0, 0.2);
-}
-
-.promo-peregraph {
-    color: #ff7500;
+.follow-link:hover {
+   background-color: rgba(255, 117, 0, 0.7);
 }
 
 .promo {
-    background-color: #252420;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    padding-top: 120px;
-    border-radius: 12px;
-    padding-bottom: 160px;
-    justify-content: space-between;
+   border-radius: 12px;
+   display: flex;
+   background-color: #252420;
+   color: #fff;
+}
+
+.promo-list {
+   margin-top: 40px;
+   margin-bottom: 50px;
+   margin-left: 100px;
+}
+
+.promo-follow-link {
+   padding-top: 12px;
+   padding-right: 24px;
+   padding-bottom: 12px;
+   padding-left: 24px;
+   text-decoration: none;
+   background-color: #ff7500;
+   color: #fff;
+   border-radius: 5px;
+}
+
+.promo-follow-link {
+   margin-top: 30px;
+   margin-left: 100px;
+}
+
+.promo-follow-link:hover {
+   background-color: rgba(255, 117, 0, 0.7);
 }
 
 .promo-img {
-    border-radius: 12px;
+   border-radius: 8px;
+   box-shadow: 24px 24px 0px 0px rgba(255, 117, 0, 0.6);
+}
+
+.orange-line {
+   width: 80px;
+   height: 3px;
+   margin-top: 30px;
+   margin-left: 130px;
+   background-color: #ff7500;
+   border: 0;
+} 
+
+.site-main-list {
+   display: flex;
+}
+
+.site-main-img {
+   background-color: rgba(255, 117, 0, 0.2);
+   width: 100px;
+   height: 100px;
+   border-radius: 50%;
+}
+
+.site-main-item {
+   margin-top: 72px;
+   margin-right: 40px;
+}
+
+.site-main-item:last-child {
+   margin-right: 0;
+}
+
+.action {
+   border-radius: 12px;
+   width: 900px;
+   height: 419px;
+   display: flex;
+   background-color: #252420;
+   color: #fff;
+   margin-right: 170px;
+   margin-bottom: 160px;
+}
+
+.action-div {
+   margin-top: 64px;
+   margin-right: 92px;
+   margin-bottom: 64px;
+   margin-left: 64px;
+}
+
+.action-strong {
+   color: #ff7500;
+}
+
+.action-follow-link {
+   padding-top: 12px;
+   padding-right: 24px;
+   padding-bottom: 12px;
+   padding-left: 24px;
+   text-decoration: none;
+   background-color: #ff7500;
+   color: #fff;
+   border-radius: 5px;
+}
+
+.action-follow-link:hover {
+   background-color: rgba(255, 117, 0, 0.7);
+}
+
+.action-img {
+   border-radius: 8px;
 }
 
 .site-footer {
-    background: #f8f8f8;
-    padding-top: 56px;
-    padding-bottom: 56px;
-} 
-
-.site-footer-actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+   background-color: #f8f8f8;
 }
 
-.footer-logo-img {
-    width: 200px;
-    height: 100px;
-    object-fit: cover;
-    object-position: center;
+.site-footer-top {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.footer-logo-img:hover {
-    opacity: 0.8;
+.site-footer-nav ul {
+   display: flex;
 }
 
-.footer-logo-img:active {
-    opacity: 0.6;
+.site-footer-nav li {
+   list-style: none;
+   margin-right: 16px;
 }
 
-.social-link {
-    margin: 0;
-    margin-right: 16px;
-    text-decoration: none;
-    list-style: none;
-    display: flex;
-    padding: 0;
+.site-footer-nav li:last-child {
+   margin-right: 0;
 }
 
-.social-link a {
-    display: block;
-    color: #252420;
+.site-footer-nav ul:hover {
+   color: #ff7500;
 }
 
-.social-link svg {
-    display: block;
-}
-
-.social-link:last-child {
-    margin-right: 0;
-}
-
-.social-link:hover {
-    color: #ff7500;
-}
-
-.site-footer-divider {
-    height: 2px;
-    border: 0;
-    margin-top: 40px;
-    margin-bottom: 64px;
-    background-color: rgba(37, 36, 32, 0.5);
-}
-
-.site-footer-link {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 15px;
-    letter-spacing: 1px;
-    color: #000;
-    list-style: none;
-    margin-right: 68px;
-}
-
-.site-footer-link:last-child {
-    margin-right: 0;
-}
-
-.site-footer-link a {
-text-decoration: none;
-list-style: none;
-color: #000;
+.footer-line {
+   width: 760px;
+   height: 2px;
+   background-color: rgba(37, 36, 32, 0.5);
+   border: 0;d
 }
 
 .site-footer-bottom {
-    display: flex;
-    padding: 0;
+   display: flex;
 }
+
+.site-footer-second-nav a {
+   text-decoration: none;
+   color: #000;
+}
+
+.site-footer-second-nav a:hover {
+   color: #ff7500;
+}
+
+.site-footer-second-nav li {
+   list-style: none;
+}
+
+.container {
+   width: 100%;
+   max-width: 900px;
+   padding-right: 30px;
+   padding-left: 30px;
+   margin-right: auto;
+   margin-left: auto;
+}
+
