--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
  body {
+   border-top: 4px solid #ff7500;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .site-header {
+   margin-top: 12px;
    background-color: #fff;
    color: black;
 }
@@ -11,6 +13,7 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
+   margin-bottom: 20px;
 }
 
 .logo {
@@ -23,7 +26,6 @@
    text-decoration: none;
    background-color: #ff7500;
    color: #fff;
-   margin-bottom: 27px;
    transition: background-color 0.5 ease;
 }
 
@@ -32,6 +34,7 @@
 }
 
 .site-header-right {
+   margin: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -134,7 +137,8 @@
 
 .site-main-item {
    margin-top: 72px;
-   margin-right: 40px;
+   margin-right: 78px;
+   margin-left: 20px;
 }
 
 .site-main-item:last-child {
@@ -143,7 +147,7 @@
 
 .action {
    border-radius: 12px;
-   width: 900px;
+   width: 100%;
    height: 419px;
    display: flex;
    background-color: #252420;
@@ -179,6 +183,7 @@
 }
 
 .action-img {
+   box-shadow: 24px 24px 0px 0px rgba(255, 117, 0, 0.6);
    border-radius: 8px;
 }
 
@@ -239,7 +244,7 @@
 
 .container {
    width: 100%;
-   max-width: 900px;
+   max-width: 1020px;
    padding-right: 30px;
    padding-left: 30px;
    margin-right: auto;
