--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,24 @@ body {
     background-color: rgba(255, 117, 0, 0.7);
  }
 
+#signup-form {
+   margin: 5px;
+}
+
+#username {
+   border: 0;
+   color: #000;
+   padding: 4px;
+   border-radius: 5px;
+}
+
+.submit-btn {
+   background-color: #ff7500;
+   border: 0;
+   border-radius: 5px;
+   padding: 5px;
+}
+
+.submit-btn:active {
+   background-color: #ffcc70;
+}
