--- a/css/interest.css
+++ b/css/interest.css
@@ -139,15 +139,33 @@ body {
    color: #000;
    padding: 4px;
    border-radius: 5px;
+   margin-bottom: 8px;
 }
 
 .submit-btn {
+   /* width: 380px; */
    background-color: #ff7500;
    border: 0;
    border-radius: 5px;
-   padding: 5px;
+   padding: 5px 10px;
+   transition: background-color 0.5s ease;
 }
 
-.submit-btn:active {
+.submit-btn:hover {
    background-color: #ffcc70;
+   padding: 5px 170px;
+}
+
+.message {
+   color: #fff;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+#password {
+   border: 0;
+   color: #000;
+   padding: 4px;
+   border-radius: 5px;
+   margin-bottom: 5px;
 }
