--- a/css/action.css
+++ b/css/action.css
@@ -1,22 +1,22 @@
 body {
     border-top: 4px solid #ff7500;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.site-header-top {
+ }
+ 
+ .site-header {
     margin-top: 12px;
     background-color: #fff;
     color: black;
-}
-
-.site-header-top {
+ }
+ 
+ .site-header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
-}
-
-.logo {
+ }
+ 
+ .logo {
     border-radius: 5px;
     padding-top: 12px;
     padding-right: 24px;
@@ -27,42 +27,42 @@ body {
     background-color: #ff7500;
     color: #fff;
     transition: background-color 0.5 ease;
-}
-
-.logo:hover {
+ }
+ 
+ .logo:hover {
     background-color: rgba(255, 117, 0, 0.7);
-}
-
-.site-header-right {
+ }
+ 
+ .site-header-right {
     margin: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.site-header-nav ul {
+ }
+ 
+ .site-header-nav ul {
     display: flex;
-}
-
-.site-header-nav a:hover {
+ }
+ 
+ .site-header-nav a:hover {
     color: #ff7500;
-}
-
-.site-header-nav a {
+ }
+ 
+ .site-header-nav a {
     text-decoration: none;
     color: #000;
-}
-
-.site-header-nav li {
+ }
+ 
+ .site-header-nav li {
     list-style: none;
     margin-right: 15px;
-}
-
-.head-page {
+ }
+ 
+ .head-page {
     border-bottom: #ff7500 solid 4px;
-}
-
-.header-follow-link {
+ }
+ 
+ .header-follow-link {
     padding-top: 12px;
     padding-right: 24px;
     padding-bottom: 12px;
@@ -71,19 +71,20 @@ body {
     background-color: #ff7500;
     color: #fff;
     border-radius: 5px;
-}
-
-.header-follow-link:hover {
+ }
+ 
+ .header-follow-link:hover {
     background-color: rgba(255, 117, 0, 0.7);
-}
+ }
 
-.search {
+ .search {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .search input {
+    width: 300px;
     border: 2px solid #ff7500;
     border-radius: 5px;
     margin-right: auto;
@@ -108,8 +109,13 @@ body {
     color: #fff;
 }
 
+
 .promo {
+    background-color: rgba(255, 117, 0, 0.2);
     margin-left: 60px;
+    border-radius: 10px;
+    border: #ff7500 solid 5px;
+    margin-bottom: 40px;
 }
 
 .promo-child {
@@ -119,18 +125,20 @@ body {
 
 .products {
     border-radius: 5px;
-    margin-right: 80px;
-    padding: 0 10px;
+    margin-right: 65px;
+    margin-bottom: 10px;
+    margin-left: 0;
+    padding: 10px 10px;
     width: 150px;
     height: 300px;
-    margin-bottom: 10px;
 }
 
-.products:last-child {
+.products:last-child { 
     margin-right: 0;
 }
 
 .products a {
+    font-size: 13px;
     text-decoration: none;
     color: black;
 }
@@ -139,12 +147,17 @@ body {
     color: #ff7500;
 }
 
+.products img {
+    border-radius: 5px;
+}
+
 .follow-link {
     display: flex;
     padding: 10px;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(255, 117, 0, 0.2);
+    border: 5px solid #ff7500;
     border-radius: 10px;
     margin-bottom: 40px;
 }
