--- a/css/interest.css
+++ b/css/interest.css
@@ -148,12 +148,12 @@ body {
    border: 0;
    border-radius: 5px;
    padding: 5px 10px;
-   transition: background-color 0.5s ease;
+   transition: padding 0.5s ease;
 }
 
 .submit-btn:hover {
-   background-color: #ffcc70;
-   padding: 5px 110px;
+   background: #ffcc70;
+   padding: 5px 80px;
    box-shadow: 0px 26px 70px 1px rgba(0, 0, 0, 0.8);
 }
 
@@ -168,5 +168,5 @@ body {
    color: #000;
    padding: 4px;
    border-radius: 5px;
-   margin-bottom: 5px;
+   margin-bottom: 10px;
 }
