--- a/css/produccts.css
+++ b/css/produccts.css
@@ -96,7 +96,7 @@ body {
     margin-left: 30px;
 }
 
-.search-wrapper button {
+.search-button {
     border: 2px solid #ff7500;
     border-radius: 5px;
     padding: 3px;
@@ -104,9 +104,18 @@ body {
     color: #000;
 }
 
-.search-wrapper button:hover {
+.search-button:hover {
     border-radius: 5px;
     padding: 3px;
+    background-color: #ff7500;
+    color: #fff;
+}
+
+#resultsList li{
+    list-style: none;
+    border-radius: 5px;
+    border: #000 3px solid;
+    padding: 5px 7px;
     background-color: #ff7500;
     color: #fff;
 }
