--- a/css/contacts.css
+++ b/css/contacts.css
@@ -227,6 +227,7 @@ body {
    color: #000;
    padding: 4px;
    border-radius: 5px;
+   margin-bottom: 20px;
 }
 
 .submit-btn {
@@ -252,9 +253,12 @@ body {
    padding: 5px;
    margin-right: 10px;
    cursor: pointer;
+   transition: all ease 0.5s;
 }
 
-#todoList button:hover
+#todoList button:hover{
+   background-color: #ffcc77;
+}
 
 #output {
    border: #fff solid 2px;
